@@ -304,6 +304,7 @@ set g_ettvFlags 3
 set g_firstBloodMsg "^7[a] ^7drew ^1FIRST BLOOD ^7from [v]"
 set g_firstBloodMsgPos 2
 set g_lastBloodMsg "^8And the final kill of this round goes to [a]^8!"
+set g_clientVersion ""
 
 // Lua API
 set lua_modules ""
