@@ -3335,6 +3335,13 @@ bitflag will force all players to respawn!)</p>
 </dl>
 <p>Default is 0</p>
 
+<a name="g_clientVersion"></a>
+<dt>g_clientVersion [string]
+<dd>
+<p>If this is not the empty string, players with a different cg_etpubc will be kicked</p>
+<p>Format is YYYYMMDD, so for example 20100628</p>
+<p>Default is ""</p>
+
 <hr>
 <a name="mapvoting"></a>
 <h3>Map Voting</h3>
